# lapis

./: .gitignore  Cargo.toml  Cranky.toml  LICENSE  README.md  test.unamed  test.unamned
.cargo-husky/hooks/: pre-commit
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  visitor.rs
crates/core/: Cargo.toml
crates/core/src/: args.rs  main.rs
crates/error/: Cargo.toml
crates/error/macros/: Cargo.toml
crates/error/macros/src/: lib.rs
crates/error/src/: error.rs  handling.rs  lib.rs  macros.rs  span.rs
crates/eval/: Cargo.toml
crates/eval/src/: callable.rs  env.rs  eval.rs  lib.rs
crates/eval/src/callable/: function.rs  mod.rs  puts.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  ops.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs  resolver.rs
crates/span/: Cargo.toml
crates/span/macros/: Cargo.toml
crates/span/macros/src/: lib.rs
crates/span/src/: file.rs  lib.rs  span.rs
examples/: factorial.lps  fibonacci.lps  fizzbuzz.lps
