[workspace]
members = ["crates/*", "crates/span/macros"]
default-members = ["crates/core"]
resolver = "2"

[workspace.dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["user-hooks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
