[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
lexer = { path = "../lexer" }
span = { path = "../span" }
span-macros = { path = "../span/macros" }
error = { path = "../error" }