[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line-col = "0.2.1"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
#ast = { path = "../ast" }
span = { path = "../span" }
span-macros = { path = "../span/macros" }
dyn-clone = "1.0.16"
