[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
ast = { path = "../ast" }
lexer = { path = "../lexer" }
span = { path = "../span" }
error = { path = "../error" }