[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
ast = { path = "../ast" }
error = { path = "../error" }
span = { path = "../span" }

[dev-dependencies]
lexer = { path = "../lexer" }